Moved log file setting to Appsettings file

--- a/AirportUtility/appsettings.json
+++ b/AirportUtility/appsettings.json
@@ -1,3 +1,14 @@
 {
-  
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt"
+        }
+      }
+    ],
+    "MinimumLevel": "Information"
+  }
+  // Other configuration settings
 }
